Instalação da Database.

--- a/src/Views/Static/Login.html
+++ b/src/Views/Static/Login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
     <link rel="stylesheet" href="/public/css/style.css">
 </head>
 
@@ -31,9 +31,9 @@
         </ul>
     </nav>
     <main>
-        <form action="" method="post">
+        <form action="?pagina=usuario&acao=entrar" method="post">
             <h3>Entrar</h3>
-            <input type="text" name="username" placeholder="Usuario" />
+            <input type="text" name="email" placeholder="Usuario" />
             <input type="password" name="password" placeholder="Senha" />
             <button>Enviar</button>
         </form>
