--- a/src/Views/Static/Register.html
+++ b/src/Views/Static/Register.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Register</title>
+    <link rel="stylesheet" href="/public/css/style.css">
 </head>
 <body>
     <!-- Formulario com Nome Completo, E-mail, Telefone, Senha e Confirme sua senha  -->
-    Registre-se
+    <main>
+        <form action="?pagina=usuario&acao=registrar" method="post">
+            <h3>Resistre-se</h3>
+            <input type="text" name="name" placeholder="Nome Completo" />
+            <input type="email" name="email" placeholder="Email" />
+            <input type="text" name="phone" placeholder="Telefone" />
+            <input type="password" name="password" placeholder="Senha" />
+            <input type="password" name="password_confirmation" placeholder="Confirme a Senha" />
+            <button>Enviar</button>
+        </form>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
