--- a/src/Views/Static/Register.html
+++ b/src/Views/Static/Register.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/public/css/style.css">
 </head>
 <body>
-    <!-- Formulario com Nome Completo, E-mail, Telefone, Senha e Confirme sua senha  -->
+    <!-- Formulario com Nome Completo, E-mail, Telefone, Senha e Confirme sua senha teste -->
     <main>
         <form action="?pagina=usuario&acao=registrar" method="post">
             <h3>Resistre-se</h3>
