Criando area de relatorios  e também a area para dashboard

--- a/src/Views/Admin/Templates/Menu.phtml
+++ b/src/Views/Admin/Templates/Menu.phtml
@@ -17,7 +17,7 @@
                     <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
                         <ul class="nav flex-column">
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center gap-2 active" aria-current="page" href="/?php">
+                                <a class="nav-link d-flex align-items-center gap-2 active" aria-current="page" href="/?pagina=admin">
                                     <svg class="bi">
                                         <use xlink:href="#house-fill" />
                                     </svg>
@@ -49,11 +49,11 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                                <a class="nav-link d-flex align-items-center gap-2" href="/?pagina=relatorios&acao=formulario">
                                     <svg class="bi">
                                         <use xlink:href="#graph-up" />
                                     </svg>
-                                    Reports
+                                    Relatórios
                                 </a>
                             </li>
                             <li class="nav-item">
