Adicionando base de dados dos cliente e também o cadastro

--- a/src/Views/Admin/Customers/Table.phtml
+++ b/src/Views/Admin/Customers/Table.phtml
@@ -15,11 +15,11 @@
         </tr>
     </thead>
     <tbody>
-        <?php foreach($table as $costumer): ?>
+        <?php foreach($table as $customer): ?>
         <tr>
-            <th scope="row"><?= $costumer['id'] ?></th>
-            <td><?= $costumer['nome'] ?></td>
-            <td><?= $costumer['rg'] ?></td>
+            <th scope="row"><?= $customer['id'] ?></th>
+            <td><?= $customer['nome'] ?></td>
+            <td><?= $customer['rg'] ?></td>
             <td width=200>
                 <div class="btn-group" role="group" aria-label="Basic outlined example">
                     <button type="button" class="btn btn-outline-primary">Editar</button>
