--- a/src/Views/Admin/Customers/Table.phtml
+++ b/src/Views/Admin/Customers/Table.phtml
@@ -1,6 +1,6 @@
 <div class="container p-5">
     <div class="d-flex justify-content-end">
-        <a href="/?pagina=clientes&acao=adicionar" class="btn brn-outline-primary">
+        <a href="/?pagina=clientes&acao=adicionar" class="btn btn-outline-primary">
             Adicionar novo cliente
         </a>
     </div>
