--- a/src/Views/Static/Login.html
+++ b/src/Views/Static/Login.html
@@ -13,12 +13,33 @@
     <header>
         <img src="" alt="">
     </header>
-    <nav>
-        <ul>
+    <nav class="navbar-nav">
+        <ul class="d-flex justify-content-around">
             <li>
-                <a href="/">Home</a>
+                <a href="#">Inicío</a>
             </li>
-            <li>Usuarios
+            <li>Produtos
+                <ul>
+                    <div>
+                        <li>
+                            <a href="#">Todos os Produtos</a>
+                        </li>
+                        <li>
+                            <a href="#"> Cadastrar Produtos</a>
+                        </li>
+                        <li>
+                            <a href="#"> Deletar Registro</a>
+                        </li>
+                    </div>
+                </ul>
+            </li>
+            <li>
+                <a href="#">Quem somos</a>
+            </li>
+            <li>
+                <a href="#">Contato</a>
+            </li>
+            <li>Usuário
                 <ul>
                     <li>
                         <a href="/?pagina=entrar">Logar-se</a>
