--- a/src/Views/Static/Register.html
+++ b/src/Views/Static/Register.html
@@ -7,6 +7,44 @@
     <link rel="stylesheet" href="/public/css/style.css">
 </head>
 <body>
+    <nav class="navbar-nav">
+        <ul class="d-flex justify-content-around">
+            <li>
+                <a href="#">Inicío</a>
+            </li>
+            <li>Produtos
+                <ul>
+                    <div>
+                        <li>
+                            <a href="#">Todos os Produtos</a>
+                        </li>
+                        <li>
+                            <a href="#"> Cadastrar Produtos</a>
+                        </li>
+                        <li>
+                            <a href="#"> Deletar Registro</a>
+                        </li>
+                    </div>
+                </ul>
+            </li>
+            <li>
+                <a href="#">Quem somos</a>
+            </li>
+            <li>
+                <a href="#">Contato</a>
+            </li>
+            <li>Usuário
+                <ul>
+                    <li>
+                        <a href="/?pagina=entrar">Logar-se</a>
+                    </li>
+                    <li>
+                        <a href="/?pagina=registrar"> Registre-se</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
     <!-- Formulario com Nome Completo, E-mail, Telefone, Senha e Confirme sua senha teste -->
     <main>
         <form action="?pagina=usuario&acao=registrar" method="post">
